[gd_scene load_steps=4 format=3 uid="uid://bcbssyuqlxkhc"]

[ext_resource type="Script" path="res://Scenes/UI/sellable_item.gd" id="1_3q1x5"]
[ext_resource type="FontFile" uid="uid://bowq5l47wqgxq" path="res://Assets/Fonts/Kenney Pixel.ttf" id="2_gu8l2"]

[sub_resource type="LabelSettings" id="LabelSettings_02vsk"]
font = ExtResource("2_gu8l2")
font_size = 24

[node name="SellableItem" type="Button"]
custom_minimum_size = Vector2(60, 80)
script = ExtResource("1_3q1x5")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="PriceText" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_02vsk")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
